--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: windows-latest
     steps:
       - name: echo a string
-        run: echo "hello!!"
+        run: echo "hello Nidhi!!"
       - name: multiline script
         run: |
           node -v
