--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -8,6 +8,6 @@ jobs:
     steps:
       - name: using merge commands
         run: 
-          git merge Master
+          git merge firstBranch
       - name: echo message
         run: Branches merged!!
