--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -7,6 +7,6 @@ jobs:
     runs-on: windows-latest
     steps:
       - name: commands
-        run: ls
+        run: git merge firstBranch
       - name: echo message
         run: echo "Branches merged!!"
