echo msg changed again

--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -8,7 +8,7 @@ jobs:
     if: github.ref == 'master'
     steps:
       - name: echo a string
-        run: echo "hello everyone..."
+        run: echo "hello world!!"
       - name: multiline script
         run: |
           node -v
