--- a/.github/workflows/masterToFirst.yml
+++ b/.github/workflows/masterToFirst.yml
@@ -10,8 +10,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.4.2  
+        $ref: 'master'
       - name: Git-commands
         run: |
+            git checkout firstBranch
             git merge master
             git push --set-upstream origin master
       - name: echo-message
