--- a/.github/workflows/PushPull.yml
+++ b/.github/workflows/PushPull.yml
@@ -1,6 +1,9 @@
 name: ActionsWorkflow
 
-on: [push, pull_request] 
+on: 
+  push:
+  pull_request:
+    types: [closed, assigned, opened, reopened]
 
 jobs: 
   run-github-actions:
