--- a/.github/SampleWorkflows/Scheduler.yml
+++ b/.github/SampleWorkflows/Scheduler.yml
@@ -1,12 +1,9 @@
-name: shell commands
+name: Sample Workflow
 
 on: 
   schedule:
     - cron: "0/5 * * * *"
     - cron: "0/3 * * 8 1"
-
-  pull_request:
-    types: [closed, opened, assigned, reopened]
 
 jobs:
   run-shell-command: 
