--- a/.github/SampleWorkflows/Scheduler.yml
+++ b/.github/SampleWorkflows/Scheduler.yml
@@ -11,7 +11,7 @@ jobs:
     if: github.ref == 'master'
     steps:
       - name: echo a string
-        run: echo "hello Nidhi!!"
+        run: echo "hello world....!!"
       - name: multiline script
         run: |
           node -v
