--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: payload
-        run: echo {{github.event.client_payload.env}} 
+        run: echo ${{github.event.client_payload.env}} 
         #using a github object to call object
         #accessing the env object from client_payload from an event declared in postman
       - name: echo string
