--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -4,6 +4,18 @@ env:
   WF_ENV: available to all jobs
 
 jobs:
+  decrypt:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: decrypt file
+        run: gpg --quiet --batch --yes --decrypt 
+          --passphrase="$PASSPHRASE" --output $HOME/decrypt.json encrypt.json
+        env: 
+          PASSPHRASE: ${{ secrets.PASSPHRASE }}
+      - name: print file
+        run: cat $HOME/decrypt.json
+
   log-env:
     runs-on: ubuntu-latest
     env:
@@ -13,6 +25,7 @@ jobs:
         env:
           STEP_ENV: Available to only this step
         run: |
+          echo "HOME: ${HOME}"
           echo "WF_ENV: ${{ secrets.WF_ENV }}"
           echo "JOB_ENV: ${JOB_ENV}"
           echo "STEP_ENV: ${STEP_ENV}"
