--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: decrypt file
         run: gpg --quiet --batch --yes --decrypt 
-          --passphrase="$PASSPHRASE" --output $HOME/decrypt.json encrypt.json
+          --passphrase="$PASSPHRASE" --output $HOME/decrypt.json encrypt.json.gpg
         env: 
           PASSPHRASE: ${{ secrets.PASSPHRASE }}
       - name: print file
