--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -10,12 +10,12 @@ jobs:
       - uses: actions/checkout@v1
       - name: decrypt file
         run: gpg --quiet --batch --yes --decrypt 
-          --passphrase="$PASSPHRASE" --output Desktop/encrypt.json 
-          encrypt.json.gpg
+          --passphrase="$PASSPHRASE" --output $HOME/secretFile.json 
+          secretFile.json.gpg
         env: 
           PASSPHRASE: ${{ secrets.PASSPHRASE }}
       - name: print file
-        run: cat $HOME/encrypt.json
+        run: cat $HOME/secretFile.json
 
   log-env:
     runs-on: ubuntu-latest
