--- a/.github/workflows/secret.yml
+++ b/.github/workflows/secret.yml
@@ -27,6 +27,5 @@ jobs:
           STEP_ENV: Available to only this step
         run: |
           echo "HOME: ${HOME}"
-          echo "WF_ENV: ${{ secrets.WF_ENV }}"
-          echo "JOB_ENV: ${JOB_ENV}"
+          echo "WF_ENV: ${{ secrets.WF_ENV }} and JOB_ENV: ${JOB_ENV}"
           echo "STEP_ENV: ${STEP_ENV}"
