--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -25,4 +25,12 @@ jobs:
     steps: 
       - name: echo
         run: echo "docker container"
-     
+      - name: ports
+        run: 'curl -X POST http://localhost:3001/api/user
+
+          -H ''Content-Type: application/json'' -d ''
+
+          {"username": "hello","address": "dwded"}"'
+      - name: Get users
+        run: curl http://localhost:3001/api/users   
+        
