--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -28,7 +28,7 @@ jobs:
       - name: ports
         run: 'curl -X POST http://localhost:3001/api/user
           -H ''Content-Type: application/json'' -d ''
-          {"username": "hello","address": "dwded"}"'
+          {"username": "hello","address": "pune"}'''
       - name: Get users
         run: curl http://localhost:3001/api/users   
         
