--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Step2 with docker
         uses: docker://node:gallium-alpine3.15
         with:
-          entrypoint: '/cmd/git'
+          entrypoint: '/mingw64/bin/git'
           args: -v
 
 
