--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -3,11 +3,19 @@ on: push
 
 jobs:
   node-version:
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
         node_version: [6,8,10]
-    runs-on: ${{matrix.os}}
+        include:
+          - os : macos-latest
+            node_version: 8
+            is_ubuntu_8: "true"
+        exclude:
+          - os: ubuntu-latest
+            node_version: 6
+  
     steps:
       - name: Log node node version
         run: node -v
