--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Step2 with docker
         uses: docker://node:gallium-alpine3.15
         with:
-          entrypoint: '/mingw64/bin/git'
+          entrypoint: '/bin/echo'
           args: -v
       - uses : actions/checkout@v1
       - name: Run script
