--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -2,7 +2,7 @@ name: Container
 on: push
 
 jobs:
-  docker-steps:
+  slackMessage-steps:
     runs-on: ubuntu-latest
     container:
       image: node:16-alpine
