--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -20,7 +20,7 @@ jobs:
           entrypoint: '/bin/echo'
           args: -v
       - uses : actions/checkout@v1
-      - name: step3 slack message
+      - name: A slack message
         uses: docker:technosophos/slack-notify
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
