--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -24,6 +24,8 @@ jobs:
         uses: docker://technosophos/slack-notify
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_MESSAGE: "THIS IS SLACK MESSAGE "
+          SLACK_MESSAGE: |
+            "THIS IS SLACK MESSAGE "
+            "Hello Nidhi...I am slack workflow.."
 
 
