--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -10,8 +10,13 @@ jobs:
         run: echo "hello!!"
       - name: multiline script
         run: |
-          node -v
           npm -v
+          npm tests
+      - name: Archive artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage-report
+          path: output/test/code-coverage.html
 
           
 
