--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -11,4 +11,8 @@ jobs:
         run: |
           node -v
           npm -v
-
+      - name: Archive artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage-report
+          path: output/test/code-coverage.html
