--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -14,5 +14,5 @@ jobs:
       - name: Archive artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: code-coverage-report
-          path: index.html
+          name: my-artifact
+          path: C:\Users\NidPatel\Desktop\ABS_work\6.5.29.4.zip
