--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -15,4 +15,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: my-artifact
-          path: C:\Users\NidPatel\Desktop\ABS_work\6.5.29.4.zip
+          path: C:/Users/NidPatel/Desktop/ABS_work/6.5.29.4.zip
