--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -8,10 +8,9 @@ jobs:
       - uses: actions/checkout@v1
       - name: echo a string
         run: echo "hello!!"
-      - name: multiline script
+      - name: run command
         run: |
-          node -v
-          npm -v
+          cd C:/Users/NidPatel/Desktop/ABS_work
       - name: Archive artifacts
         uses: actions/upload-artifact@v2
         with:
