--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - id: matrix
         run: |
-          echo "value::[${{vars.MATRIX_VAR}}]">> GITHUB_OUTPUT
+          echo 'value::[ \"${{vars.MATRIX_VAR}} \"]'>> GITHUB_OUTPUT
 
     outputs:
       matrix: ${{ steps.matrix.outputs.value }}
