--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - id: matrix
         run: |
-          echo "value::[{ \"name\":\"package-a\", \"value\": \"true\" }]"" >> GITHUB_OUTPUT
+          echo "value::[{ \"name\":\"package-a\", \"value\": \"true\" }]" >> GITHUB_OUTPUT
 #           echo "value::[${MATRIX_VAR}]">> GITHUB_OUTPUT
         # env:
         #   MATRIX_VAR: ${{vars.MATRIX_VAR}}
