--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -1,35 +1,24 @@
 name: Running matrix
 
 on: push
-# env:
-#   JSON_VALUE: '{ "name":"package-a", "enabled": "true" }'
 
 jobs:
 
   setup:
     runs-on: ubuntu-latest
-    environment: staging
     outputs:
       matrix: ${{ steps.matrix.outputs.value }}
     steps:
       - id: matrix
-        env:
-          MATRIX_VAR: ${{vars.MATRIX_VAR}}
         run: |
-          echo "value=[$MATRIX_VAR]" >> GITHUB_OUTPUT
-#          echo "value::[ 'MATRIX_VAR' ]">> GITHUB_OUTPUT
-#          echo 'value::[{ "name":"package-a", "value": "true" }]' >> GITHUB_OUTPUT
-#           echo "value::[${MATRIX_VAR}]">> GITHUB_OUTPUT
-        # env:
-        #   MATRIX_VAR: ${{vars.MATRIX_VAR}}
-
+          echo '::set-output name=value::["a", "b", "c"]'
   build:
     needs: [ setup ]
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        # value: ${{ needs.setup.outputs.matrix }}
         value: ${{fromJSON(needs.setup.outputs.matrix)}}
     steps:
       - run: |
-         echo " Matrix: ${{ matrix.value }}"
-
+          echo "${{ matrix.value }}"
