Echoing env var

--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -11,7 +11,8 @@ jobs:
     steps:
       - id: matrix
         run: |
-          echo '::set-output name=value::["${{vars.MATRIX_VAR}}"]'
+          echo 'Matrix env var is: ${{vars.MATRIX_VAR}} '
+#          echo '::set-output name=value::["${{vars.MATRIX_VAR}}"]'
   build:
     needs: [ setup ]
     runs-on: ubuntu-latest
