--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -12,7 +12,7 @@ jobs:
       - id: matrix
         run: |
           echo 'Matrix env var is: ${{vars.MATRIX_VAR}} '
-          echo '::set-output name=value::["${{vars.MATRIX_VAR}}"]'
+          echo '::set-output name=value::[${{vars.MATRIX_VAR}}]'
   build:
     needs: [ setup ]
     runs-on: ubuntu-latest
