--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -11,8 +11,8 @@ jobs:
     steps:
       - id: matrix
         run: |
-          echo 'Matrix env var is: ${{vars.CONFIG_VAR}} '
-          echo '::set-output name=value::[${{vars.CONFIG_VAR}}]'
+          echo 'Matrix env var is: ${{vars.MATRIX_VAR}} '
+          echo '::set-output name=value::[${{vars.MATRIX_VAR}}]'
   build:
     needs: [ setup ]
     runs-on: ubuntu-latest
@@ -21,4 +21,4 @@ jobs:
         value: ${{fromJSON(needs.setup.outputs.matrix)}}
     steps:
       - run: |
-          echo "Value is: ${{matrix.value }}"
+          echo "Value is: ${{toJSON(matrix.value.name) }}"
