--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -31,7 +31,7 @@ jobs:
     steps:
     - name: Setup
       id: setup
-      run: echo "matrix=$(jq -r -c . <<< "$CONFIG_VAR")" >> $GITHUB_OUTPUT
+      run: echo "matrix=$(jq -r -c . <<< '$CONFIG_VAR')" >> $GITHUB_OUTPUT
     
     - name: Check
       run: jq . <<< '${{ steps.setup.outputs.matrix }}'
