--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -32,8 +32,8 @@ jobs:
     - name: Setup
       id: setup
       run: |
-        echo "Env var CONFIG_VAR = $CONFIG_VAR"
-        echo "matrix=$(jq -r -c . <<< '$CONFIG_VAR')" >> $GITHUB_OUTPUT
+        echo "Env var CONFIG_VAR = ${{vars.CONFIG_VAR}}"
+        echo "matrix=$(jq -r -c . <<< '${{vars.CONFIG_VAR}}')" >> $GITHUB_OUTPUT
     
     - name: Check
       run: jq . <<< '${{ steps.setup.outputs.matrix }}'
@@ -55,7 +55,7 @@ jobs:
         CONFIG: ${{ fromJSON(toJSON(matrix)).config }}
         NESTED: ${{ join(fromJSON(toJSON(matrix)).nested.*.val, ', ') }}
       run: |
-        echo "MATRIX: $(jq -r -c '.' <<< "$MATRIX")"
+        echo "MATRIX: $(jq -r -c '.' <<< '$MATRIX')"
         echo "PROJECT: [$PROJECT]"
         echo "CONFIG: [$CONFIG]"
         echo "NESTED: [$NESTED]"
