--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -31,7 +31,7 @@ jobs:
     steps:
     - name: Setup
       id: setup
-      run: echo "matrix=$(tr -d '\n' < ${{vars.CONFIG_VAR}})" >> $GITHUB_OUTPUT
+      run: echo "matrix=$(${{vars.CONFIG_VAR}})" >> $GITHUB_OUTPUT
 #        echo "matrix=$(jq -r -c . <<< '${{vars.CONFIG_VAR}}')" >> $GITHUB_OUTPUT
     
     - name: Check
