--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -31,9 +31,9 @@ jobs:
     steps:
     - name: Setup
       id: setup
-      run: echo "matrix=$(EOF<<${{vars.CONFIG_VAR}})" >> $GITHUB_OUTPUT
+      run: echo "matrix=$(tr -d ',' < ${{vars.CONFIG_VAR}})" >> $GITHUB_OUTPUT
 #        echo "matrix=$(jq -r -c . <<< '${{vars.CONFIG_VAR}}')" >> $GITHUB_OUTPUT
-    
+
     # - name: Check
     #   run: jq . <<< '${{ steps.setup.outputs.matrix }}'
 
