--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -26,15 +26,15 @@ jobs:
     runs-on: ubuntu-latest
     environment: staging
     outputs:
-      matrix: ${{ steps.setup.outputs.value }}
+      matrix: ${{ steps.setup.outputs.matrix }}
 
     steps:
     - name: Setup
-      id: matrix
-      run: echo "value=$(jq -r -c . <<< '${{vars.CONFIG_VAR}}')" >> $GITHUB_OUTPUT
+      id: setup
+      run: echo "matrix=$(jq -r -c . <<< '${{vars.CONFIG_VAR}}')" >> $GITHUB_OUTPUT
 
     # - name: Check
-    #   run: jq . <<< '${{ steps.setup.outputs.value }}'
+    #   run: jq . <<< '${{ steps.setup.outputs.matrix }}'
 
   step2:
     needs: [step1]
