--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -30,7 +30,7 @@ jobs:
     steps:
     - name: Setup
       id: matrix_setup
-      run: echo "value=$(jq -r -c . <<< '${{vars.CONFIG_VAR}}')" >> $GITHUB_OUTPUT
+      run: echo "value=$(jq -r -c . <<< '${{vars.NEXTED_JSON}}')" >> $GITHUB_OUTPUT
 
     # - name: Check
     #   run: jq . <<< '${{ steps.setup.outputs.matrix }}'
