--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -41,19 +41,19 @@ jobs:
     strategy:
       matrix: 
         include: ${{ fromJSON(needs.step1.outputs.matrix) }}
-    steps:
-    - run: |
-        echo "Value of matrix is: ${{toJSON(matrix) }}"
-
     # steps:
-    # - name: Check
-    #   env:
-    #     MATRIX: ${{ toJSON(matrix) }}
-    #     PROJECT: ${{ fromJSON(toJSON(matrix)).project }}
-    #     CONFIG: ${{ fromJSON(toJSON(matrix)).config }}
-    #     NESTED: ${{ join(fromJSON(toJSON(matrix)).nested.*.val, ', ') }}
-    #   run: |
-    #     echo "MATRIX: $(jq -r -c '.' <<< '$MATRIX')"
-    #     echo "PROJECT: [$PROJECT]"
-    #     echo "CONFIG: [$CONFIG]"
-    #     echo "NESTED: [$NESTED]"
+    # - run: |
+    #     echo "Value of matrix is: ${{toJSON(matrix) }}"
+
+    steps:
+    - name: Check
+      env:
+        MATRIX: ${{ toJSON(matrix) }}
+        PROJECT: ${{ toJSON(matrix).project }}
+        # CONFIG: ${{ fromJSON(toJSON(matrix)).config }}
+        # NESTED: ${{ join(fromJSON(toJSON(matrix)).nested.*.val, ', ') }}
+      run: |
+        echo "MATRIX: $(jq -r -c '.' <<< '$MATRIX')"
+        echo "PROJECT: [$PROJECT]"
+        echo "CONFIG: [$CONFIG]"
+        echo "NESTED: [$NESTED]"
