--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Check
       env:
         MATRIX: ${{ toJSON(matrix) }}
-        PROJECT: ${{ toJSON(matrix).project }}
+        PROJECT: ${{ toJSON(matrix.project) }}
         # CONFIG: ${{ fromJSON(toJSON(matrix)).config }}
         # NESTED: ${{ join(fromJSON(toJSON(matrix)).nested.*.val, ', ') }}
       run: |
