--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -50,7 +50,7 @@ jobs:
       env:
         MATRIX: ${{ toJSON(matrix) }}
         PROJECT: ${{ toJSON(matrix.project) }}
-        CONFIG: ${{ fromJSON(matrix.config) }}
+        CONFIG: ${{ toJSON(matrix.config) }}
         # NESTED: ${{ join(fromJSON(toJSON(matrix)).nested.*.val, ', ') }}
       run: |
         echo "MATRIX: $(jq -r -c '.' <<< '$MATRIX')"
