--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -51,7 +51,7 @@ jobs:
         MATRIX: ${{ toJSON(matrix) }}
         PROJECT: ${{ toJSON(matrix.project) }}
         CONFIG: ${{ toJSON(matrix.config) }}
-        # NESTED: ${{ join(fromJSON(toJSON(matrix)).nested.*.val, ', ') }}
+        NESTED: ${{ toJSON(matrix.nested.val) }}
       run: |
         echo "MATRIX: $(jq -r -c '.' <<< '$MATRIX')"
         echo "PROJECT: [$PROJECT]"
