--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -53,7 +53,7 @@ jobs:
         CONFIG: ${{ toJSON(matrix.config) }}
         NESTED: ${{ toJSON(matrix.nested) }}
       run: |
-        echo "MATRIX: $(jq -r -c '.' <<< '$MATRIX')"
+        echo "MATRIX: $MATRIX"
         echo "PROJECT: [$PROJECT]"
         echo "CONFIG: [$CONFIG]"
         echo "NESTED: [$NESTED]"
