--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -49,11 +49,11 @@ jobs:
     - name: Check
       env:
         MATRIX: ${{ toJSON(matrix) }}
-        PROJECT: ${{ toJSON(matrix.project) }}
-        CONFIG: ${{ toJSON(matrix.config) }}
-        NESTED: ${{ toJSON(matrix.nested) }}
+        PROJECT: ${{ fromJSON(toJSON(matrix)).project }}
+        CONFIG: ${{ fromJSON(toJSON(matrix)).config }}
+        NESTED: ${{ join(fromJSON(toJSON(matrix)).nested.*.val, ', ') }}
       run: |
-        echo "MATRIX: $MATRIX"
+        echo "MATRIX: $(jq -r -c '.' <<< '$MATRIX')"
         echo "PROJECT: [$PROJECT]"
         echo "CONFIG: [$CONFIG]"
         echo "NESTED: [$NESTED]"
