--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -30,7 +30,7 @@ jobs:
     steps:
     - name: Setup
       id: matrix_setup
-      run: echo "value=$(jq -r -c . <<< '${{vars.NESTED_JSON}}')" >> $GITHUB_OUTPUT
+      run: echo "value=$(jq -r -c . <<< '${{vars.TENANT_DETAILS}}')" >> $GITHUB_OUTPUT
 
     # - name: Check
     #   run: jq . <<< '${{ steps.setup.outputs.matrix }}'
@@ -49,9 +49,9 @@ jobs:
     - name: Check
       env:
         MATRIX: ${{ toJSON(matrix) }}
-        PROJECT: ${{ fromJSON(toJSON(matrix)).project }}
-        CONFIG: ${{ fromJSON(toJSON(matrix)).config }}
-        NESTED: ${{ join(fromJSON(toJSON(matrix)).nested.*.val, ', ') }}
+        APP-NAME: ${{ fromJSON(toJSON(matrix)).app-name }}
+        ARTIFACT-NAME: ${{ fromJSON(toJSON(matrix)).artifact-name }}
+        # NESTED: ${{ join(fromJSON(toJSON(matrix)).nested.*.val, ', ') }}
       run: |
         echo "MATRIX: $(jq -r -c '.' <<< '$MATRIX')"
         echo "PROJECT: [$PROJECT]"
