--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -51,9 +51,9 @@ jobs:
         MATRIX: ${{ toJSON(matrix) }}
         APP-NAME: ${{ fromJSON(toJSON(matrix)).app-name }}
         ARTIFACT-NAME: ${{ fromJSON(toJSON(matrix)).artifact-name }}
-        # NESTED: ${{ join(fromJSON(toJSON(matrix)).nested.*.val, ', ') }}
+#        NESTED: ${{ join(fromJSON(toJSON(matrix)).nested.*.val, ', ') }}
       run: |
-        echo "MATRIX: $(jq -r -c '.' <<< '$MATRIX')"
-        echo "PROJECT: [$PROJECT]"
-        echo "CONFIG: [$CONFIG]"
-        echo "NESTED: [$NESTED]"
+        echo "MATRIX: $MATRIX"
+        echo "APP-NAME: [$APP-NAME]"
+        echo "ARTIFACT-NAME: [$ARTIFACT-NAME]"
+#        echo "NESTED: [$NESTED]"
