--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Check
       env:
         MATRIX: ${{ toJSON(matrix) }}
-        APP-NAME: ${{ fromJSON(toJSON(matrix)).tenant-details.app-name }}
+        APP-NAME: ${{ fromJSON(toJSON(matrix)).tenant-details.*.app-name }}
         ARTIFACT-NAME: ${{ fromJSON(toJSON(matrix)).artifact-name }}
 #        NESTED: ${{ join(fromJSON(toJSON(matrix)).nested.*.val, ', ') }}
       run: |
