--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -49,11 +49,11 @@ jobs:
     - name: Check
       env:
         MATRIX: ${{ toJSON(matrix) }}
-        APP_NAME: ${{ fromJSON(toJSON(matrix)).tenant-details}}
-        ARTIFACT_NAME: ${{ fromJSON(toJSON(matrix)).artifact-name }}
-#        NESTED: ${{ join(fromJSON(toJSON(matrix)).nested.*.val, ', ') }}
+        APPNAME: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}
+        # CONFIG: ${{ fromJSON(toJSON(matrix)).config }}
+        # NESTED: ${{ join(fromJSON(toJSON(matrix)).nested.*.val, ', ') }}
       run: |
-        echo "MATRIX: $MATRIX"
-        echo "APP-NAME: [$APP_NAME]"
-        echo "ARTIFACT-NAME: [$ARTIFACT_NAME]"
+        echo "MATRIX: $(jq -r -c '.' <<< '$MATRIX')"
+        echo "APPNAME: [$APPNAME]"
+#        echo "CONFIG: [$CONFIG]"
 #        echo "NESTED: [$NESTED]"
