--- a/.github/workflows/Matrix-var.yml
+++ b/.github/workflows/Matrix-var.yml
@@ -50,10 +50,10 @@ jobs:
       env:
         MATRIX: ${{ toJSON(matrix) }}
         APP_NAME: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}
-        # CONFIG: ${{ fromJSON(toJSON(matrix)).config }}
+        ARTIFACT_NAME: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.artifact-name, ', ') }}
         # NESTED: ${{ join(fromJSON(toJSON(matrix)).nested.*.val, ', ') }}
       run: |
-        echo "MATRIX: $(jq -r -c '.' <<< '$MATRIX')"
+        echo "MATRIX: $MATRIX"
         echo "APPNAME: [$APP_NAME]"
-#        echo "CONFIG: [$CONFIG]"
+        echo "ARTIFACT_NAME: [$ARTIFACT_NAME]"
 #        echo "NESTED: [$NESTED]"
